# worgen-rs

./: ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
assets/shaders/: terrain_material.wgsl
benches/: data.rs
src/: camera.rs  lib.rs  loading.rs  main.rs  material.rs  settings.rs  state.rs  ui.rs  worgen.rs
src/assets/: archive.rs  bounding_sphere.rs  data_base.rs  geoset.rs  image.rs  material.rs  mesh.rs  mod.rs  model.rs  root_aabb.rs  world_map.rs  world_model.rs
src/data/: archive.rs  file.rs  material.rs  mod.rs  model.rs  texture.rs  world_map.rs  world_model.rs
src/data/bundle/: material_bundle.rs  mod.rs  model_bundle.rs  texture_bundle.rs  world_map_bundle.rs  world_model_bundle.rs
src/ui/: left_panel.rs  mod.rs  right_panel.rs
