[package]
name = "worgen-rs"
version = "0.1.6"
authors = ["Nocthir <nocthir@proton.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An interactive 3D application for exploring immersive virtual environments."
repository = "https://github.com/nocthir/worgen-rs"

# Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
anyhow = "1.0.*"
bevy = { version = "0.16.*", features = [ "bevy_gltf", "bevy_state" ] }
bevy-inspector-egui = "0.33.*"
bevy_egui = "0.36.*"
serde = "1.0.*"
serde_json = "1.0.*"
#wow-adt = "0.3.*"
#wow-m2 = "0.3.*"
#wow-mpq = "0.3.*"
#wow-wmo = "0.3.*"
#wow-blp = "0.3.*"

wow-adt = { path = "../warcraft-rs/file-formats/world-data/wow-adt" }
wow-m2 = { path = "../warcraft-rs/file-formats/graphics/wow-m2" }
wow-mpq = { path = "../warcraft-rs/file-formats/archives/wow-mpq" }
wow-wmo = { path = "../warcraft-rs/file-formats/graphics/wow-wmo" }
wow-blp = { path = "../warcraft-rs/file-formats/graphics/wow-blp" }

[dev-dependencies]
env_logger = "*"
criterion = "*"

[[bench]]
name = "data"
harness = false
