[package]
name = "worgen-rs"
version = "0.2.0"
authors = ["Nocthir <nocthir@proton.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An interactive 3D application for exploring immersive virtual environments."
repository = "https://github.com/nocthir/worgen-rs"

[[bin]]
name = "worgen-rs"
test = false

# Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
anyhow = "1.0.*"
bevy = { version = "0.16.*", features = [ "bevy_gltf", "bevy_state" ] }
bevy-inspector-egui = "0.33.*"
bevy_egui = "0.36.*"
serde = "1.0.*"
serde_json = "1.0.*"
wow-adt = { git = "https://github.com/nocthir/warcraft-rs", rev = "c4aba4df719a7754191efedfbfecfe0d89be33d6" }
wow-m2 = { git = "https://github.com/nocthir/warcraft-rs", rev = "c4aba4df719a7754191efedfbfecfe0d89be33d6" }
wow-mpq = { git = "https://github.com/nocthir/warcraft-rs", rev = "c4aba4df719a7754191efedfbfecfe0d89be33d6" }
wow-wmo = { git = "https://github.com/nocthir/warcraft-rs", rev = "c4aba4df719a7754191efedfbfecfe0d89be33d6" }
wow-blp = { git = "https://github.com/nocthir/warcraft-rs", rev = "c4aba4df719a7754191efedfbfecfe0d89be33d6" }

#wow-adt = { path = "../warcraft-rs/file-formats/world-data/wow-adt" }
#wow-m2 = { path = "../warcraft-rs/file-formats/graphics/wow-m2" }
#wow-mpq = { path = "../warcraft-rs/file-formats/archives/wow-mpq" }
#wow-wmo = { path = "../warcraft-rs/file-formats/graphics/wow-wmo" }
#wow-blp = { path = "../warcraft-rs/file-formats/graphics/wow-blp" }

[dev-dependencies]
env_logger = "*"
criterion = "*"

[[bench]]
name = "data"
harness = false
