[package]
name = "worgen-rs"
version = "0.3.4"
authors = ["Nocthir <nocthir@proton.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "An interactive 3D application for exploring immersive virtual environments."
repository = "https://github.com/nocthir/worgen-rs"

[[bin]]
name = "worgen-rs"
test = false

# Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
#[profile.dev.package."*"]
#opt-level = 3

[dependencies]
anyhow = "1.0.*"
bevy = { version = "0.17.*", features = [ "bevy_gltf", "bevy_state" ] }
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", rev = "2e9f7ebe804cd4f78b74c74b4570fedd53948e13" }
bevy_egui = "0.37.*"
serde = "1.0.*"
serde_json = "1.0.*"
thiserror = "2.0.*"
image = "0.25.*"

wow-adt = { git = "https://github.com/nocthir/warcraft-rs", rev = "402345dab0358ae70fc752597f11b772098f30a5" }
wow-m2 = { git = "https://github.com/nocthir/warcraft-rs", rev = "402345dab0358ae70fc752597f11b772098f30a5" }
wow-mpq = { git = "https://github.com/nocthir/warcraft-rs", rev = "402345dab0358ae70fc752597f11b772098f30a5" }
wow-wmo = { git = "https://github.com/nocthir/warcraft-rs", rev = "402345dab0358ae70fc752597f11b772098f30a5" }
wow-blp = { git = "https://github.com/nocthir/warcraft-rs", rev = "402345dab0358ae70fc752597f11b772098f30a5" }

#wow-adt = { path = "../warcraft-rs/file-formats/world-data/wow-adt" }
#wow-m2 = { path = "../warcraft-rs/file-formats/graphics/wow-m2" }
#wow-mpq = { path = "../warcraft-rs/file-formats/archives/wow-mpq" }
#wow-wmo = { path = "../warcraft-rs/file-formats/graphics/wow-wmo" }
#wow-blp = { path = "../warcraft-rs/file-formats/graphics/wow-blp" }

[dev-dependencies]
env_logger = "*"
criterion = "*"

[[bench]]
name = "data"
harness = false
